--- a/todo.org
+++ b/todo.org
@@ -1,6 +1,6 @@
 * list of items to do:
-  - ! move server.js to server folder, db.js to server/db folder, models to server/models
   - ! add Router and refactor server.js, move all to routes folder
+  - ! add tests for all routes
   - use Joi for validations
   - generate unique ids (uuid)
   - and start script, engines for heroku
